# RhinoJson

./: .gitmodules  CMakeLists.txt  main.cpp
test/: test_data.3dm
